Refactor Difficulty and ClimbingRoadType (delete)
