# business/src/main/java/truespot/business/dto/ClimbingRoadDTO.java
@@ -8,5 +8,8 @@ public class ClimbingRoadDTO {
     private long id;
     private String name;
     private String description;
-
+    private String type;
+    private int number;
+    private char letter;
+    private char symbol;
 }
