# business/src/main/java/truespot/business/dto/DifficultyDTO.java
@@ -1,13 +1,0 @@
-package truespot.business.dto;
-
-import lombok.Data;
-
-@Data
-public class DifficultyDTO {
-
-    private long id;
-    private int number;
-    private char letter;
-    private char symbol;
-
-}
